Fixed navlink animation + gap

--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -111,6 +111,7 @@
   background: #10182C;
   color: #898A8C;
   height: 12%;
+  margin-bottom: -1px;
   opacity: 0%;
 
   * {
